--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.19.0",
+    "dayjs": "^1.11.11",
     "firebase": "^10.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.24.0",
     "swiper": "^11.1.4",
     "uuid": "^10.0.0"
   },
