--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "antd": "^5.19.0",
+    "axios": "^1.7.4",
     "dayjs": "^1.11.11",
     "firebase": "^10.12.2",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.24.0",
+    "react-router-dom": "^6.26.1",
     "swiper": "^11.1.4",
     "uuid": "^10.0.0"
   },
